minor fix text navigation visibility

--- a/src/app/core/sidebar/details/details.component.scss
+++ b/src/app/core/sidebar/details/details.component.scss
@@ -236,7 +236,7 @@
         .show-route {
           display: none;
         }
-        p {
+        >p {
           display: none;
         }
       }
